--- a/dataCleaning.Rmd
+++ b/dataCleaning.Rmd
@@ -37,8 +37,6 @@ functional programming
 Materials and setup
 -------------------
 
-**NOTE: skip this section if you are running these examples in your web browser at tutorials-live.iq.harvard.edu**
-
 Everyone should have R installed -- if not:
 
 -   Open a web browser and go to <http://cran.r-project.org> and download and
@@ -77,7 +75,14 @@ of columns and ranks 51-100 in a separate set of columns.
 4. Some years include columns for "changes in rank", others do not.
 5. There are notes below the data.
 
-As you can see, we have a lot of work to do. Let's get started.
+As you can see, we have a lot of work to do. Let's get started by attaching some useful R packages.
+
+```{r}
+library(tidyverse)
+library(stringr)
+library(readxl)
+library(purrr)
+```
 
 Iterating over a directory of files
 ================================================
@@ -116,12 +121,7 @@ and
 the [tidyverse](https://cran.r-project.org/web/packages/tidyverse/index.html)
 package which provides more modern versions of many basic functions in R.
 
-```{r}
-library(tidyverse)
-library(stringr)
-library(readxl)
-```
-The *string* package provides functions to detect, locate, extract, match,
+The *stringr* package provides functions to detect, locate, extract, match,
 replace, and split strings (among other things). Here we want to detect the
 pattern "Table 1", and only return elements with this pattern. We can do that
 using the `str_subset` function. The first argument to `str_subset` is character
